--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -193,9 +193,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h1>Find the True Love of Your Dog's Life Today.</h1>
+    <button class="btn btn-lg btn-dark dwnld" type="button"><i class="fab fa-apple"></i>Download</button>
+    <button class="btn btn-lg btn-light dwnld" type="button"><i class="fab fa-google-play"></i>Download</button>
 
   </section>
 
@@ -203,6 +203,10 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="social fab fa-facebook-f"></i>
+    <i class="social fab fa-twitter"></i>
+    <i class="social fab fa-instagram"></i>
+    <i class="social fas fa-envelope"></i>
 
     <p>© Copyright 2018 TinDog</p>
 
